--- a/.eslintrc
+++ b/.eslintrc
@@ -26,7 +26,8 @@
     "sort-imports": "error",
     "symbol-description": "error",
     "template-curly-spacing": "error",
-    "yield-star-spacing": "error"
+    "yield-star-spacing": "error",
+    "no-constant-condition": ["error", {"checkLoops": false}]
   },
   "parserOptions": {
     "sourceType": "module",
