--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "check": "npm test && npm run lint",
     "clean": "rm build/*",
     "build": "npm run clean && browserify index.es -o build/index.js -t babelify",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "bench": "browserify ./author/bench.es -o ./author/bench.js -t babelify && node ./author/bench.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
     "babel-preset-stage-3": "^6.17.0",
     "babel-register": "^6.18.0",
     "babelify": "^7.3.0",
+    "benchmark": "^2.1.2",
     "browserify": "^13.1.1",
     "eslint": "^3.12.0",
     "mocha": "^3.2.0",
