--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "lint": "eslint ./index.es",
     "check": "npm test && npm run lint",
     "clean": "rm -f build/*",
-    "build": "npm run clean && browserify index.es -o build/index.js -t babelify",
+    "build": "npm run clean && babel index.es -o build/index.js",
     "prepublish": "npm run build",
-    "bench": "browserify ./author/bench.es -o ./author/bench.js -t babelify && node ./author/bench.js"
+    "bench": "npm run build && babel ./author/bench.es -o ./author/bench.js && node ./author/bench.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
     "neologd"
   ],
   "dependencies": {
+    "babel-cli": "^6.18.0"
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
@@ -29,9 +30,7 @@
     "babel-preset-power-assert": "^1.0.0",
     "babel-preset-stage-3": "^6.17.0",
     "babel-register": "^6.18.0",
-    "babelify": "^7.3.0",
     "benchmark": "^2.1.2",
-    "browserify": "^13.1.1",
     "eslint": "^3.12.0",
     "mocha": "^3.2.0",
     "power-assert": "^1.4.2"
