--- a/package.json
+++ b/package.json
@@ -20,10 +20,8 @@
     "regexp",
     "neologd"
   ],
-  "dependencies": {
-    "babel-cli": "^6.18.0"
-  },
   "devDependencies": {
+    "babel-cli": "^6.18.0",
     "babel-eslint": "^6.1.2",
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-preset-es2015": "^6.18.0",
